# enterprise-data-quality-platform

./: .env.example  .gitignore  FINAL_SUMMARY.txt  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py
backend/analytics/: __init__.py  eda_engine.py  sql_queries.py
backend/anomaly_detection/: __init__.py  detector.py
backend/api/: dependencies.py
backend/api/routes/: analytics.py  anomaly.py  auth.py  cleaning.py  datasets.py  forecasting.py  sql_analytics.py  validation.py
backend/database/: __init__.py  engine.py  models.py
backend/forecasting/: __init__.py  forecaster.py
backend/schemas/: __init__.py  analytics.py  dataset.py  user.py  validation.py
backend/services/: analytics_service.py  auth_service.py  cleaning_service.py  dataset_service.py  sql_service.py  validation_service.py
backend/utils/: file_handler.py  logger.py  validators.py
backend/validation/: quality_engine.py
docs/: API.md
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: main.js
tests/: conftest.py  test_analytics.py  test_auth.py  test_cleaning.py  test_datasets.py  test_sql_analytics.py  test_validation.py
